--- a/Meta NFT/public/index.html
+++ b/Meta NFT/public/index.html
@@ -273,11 +273,41 @@
         <div class="row">
           <div class="col-lg-4 g-3">
               <div class="boxing">
-                <div class="img">
-                  <img src="https://hasnaanajmi.com/env/Metanft/images/bid/4.jpg" alt="">
-                  <a href="#">
-                    <i class="fa-regular fa-heart"></i>
-                </a>
+                <div class="all">
+                  <div class="img">
+                    <a href="#">
+                      <img src="https://hasnaanajmi.com/env/Metanft/images/bid/4.jpg" alt="">
+                    </a>
+                    <div class="heart">
+                      <a href="#"><i class="fa-regular fa-heart"></i></a>
+                    </div>
+                    <a class="abid" href="#">Place a bid</a>
+                  </div>
+                  <div class="nft_box _cover">
+                    <div class="nft_box_titlewrap">
+                        <h3 class="nft_box_title">
+                            <a href="#">3D Illustration</a>
+                        </h3>
+                        <div class="nft_box_icon">
+                            <i class="fa-solid fa-fire"></i>
+                        </div>
+                    </div>
+                    <div class="nft_box_wordlife">
+                        <div class="nft_box_user">
+                            <div class="nft_box_img">
+                                <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/2.jpg" alt="">
+                            </div>
+                            <div class="nft_box_name">
+                                <span>Creator</span>
+                                <h4>@Sinanart</h4>
+                            </div>
+                        </div>
+                        <div class="nft_box_price">
+                            <span>Current Bid</span>
+                            <h4>4.07 ETH</h4>
+                        </div>
+                    </div>
+                </div>
                 </div>
               </div>
           </div>
