--- a/Meta NFT/public/index.html
+++ b/Meta NFT/public/index.html
@@ -16,7 +16,7 @@
     <header id="all">
         <div class="container">
             <div class="all_line">
-                <a href="#">
+                <a href="./index2.html">
                     <img src="https://hasnaanajmi.com/env/Metanft/images/logo.png" alt="">
                 </a>
                 <nav class="menu">
@@ -866,7 +866,89 @@
         </div>
       </div>
     </section>
+    <section id="blur">
+      <div class="container">
+        <div class="text">
+          <h3>Latest News</h3>
+          <a href="#">Discover more<i class="fa-solid fa-angle-right"></i></a>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 g-4">
+            <div class="img">
+              <img src="https://hasnaanajmi.com/env/Metanft/images/blog/1.jpg" alt="">
+              <div class="txt">
+                <h5>Nftartwork </h5>
+                <a class="div" href="#">How to Create Your 1st Crypto NFTs</a>
+                <div class="icon">
+                  <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/3.jpg" alt="">
+                  <div class="list">
+                    <a class="pik" href="#">Yassir Yates</a>
+                    <h5>September 17, 2022</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 g-4">
+            <div class="img">
+              <img src="https://hasnaanajmi.com/env/Metanft/images/blog/2.jpg" alt="">
+              <div class="txt">
+                <h5>Digitalart </h5>
+                <a class="div" href="#">It’s the Great Chance to Invest in NFTs</a>
+                <div class="icon">
+                  <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/1.jpg" alt="">
+                  <div class="list">
+                    <a class="pik" href="#">Yomna Doe</a>
+                    <h5>September 17, 2022</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
    </main>
+   <footer id="end" style="background-image: url(https://hasnaanajmi.com/env/Metanft/images/footer-animation-bg.svg);">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3">
+            <div class="logo">
+              <a href="#">
+                <img src="https://hasnaanajmi.com/env/Metanft/images/logo.png" alt="">
+            </a>
+            </div>
+            <p>Dolor repellendus temporibus autem quibus dam et aut officiis debitis aut rerum necessita tibus saepe tempo incidunt labore...</p>
+        </div>
+        <div class="col-lg-3">
+          <h3>Site Map</h3>
+          <ul>
+            <li><a href="#"> > Home</a></li>
+            <li><a href="#"> > About us</a></li>
+            <li><a href="#"> > Roadmap</a></li>
+            <li><a href="#"> > Our Team</a></li>
+            <li><a href="#"> > FAQ</a></li>
+            <li><a href="#"> > Articles</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-3">
+          <h3>Company</h3>
+          <ul>
+            <li><a href="#"> > Help & Support</a></li>
+            <li><a href="#"> > Terms Canditions</a></li>
+            <li><a href="#"> > Privacy Policy</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-3">
+          <h3>Subscribe Newsletter</h3>
+          <div class="inpt">
+            <input type="email" name="email" id="email" placeholder="Email address">
+            <a href="#"><i class="fa-solid fa-paper-plane"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+   </footer>
    <script src="https://kit.fontawesome.com/610cd415f0.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
