--- a/Meta NFT/public/index2.html
+++ b/Meta NFT/public/index2.html
@@ -24,7 +24,7 @@
                             <i style="color: #f70361;" class="fa-solid fa-angle-down"></i>
                             <div class="dropdown-content">
                               <a class="drp" href="./index.html">HOME 1</a>
-                              <a class="drp" href="#">HOME 2</a>
+                              <a class="drp" href="./index2.html">HOME 2</a>
                             </div>
                           </div>  
                         </li>
@@ -738,5 +738,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/610cd415f0.js" crossorigin="anonymous"></script>
+<script src="../src/js/home.js"></script>
+<script src="../src/js/home2.js"></script>
 </body>
 </html>
