--- a/Meta NFT/public/index.html
+++ b/Meta NFT/public/index.html
@@ -27,7 +27,7 @@
                             <i style="color: #f70361;" class="fa-solid fa-angle-down"></i>
                             <div class="dropdown-content">
                               <a class="drp" href="./index.html">HOME 1</a>
-                              <a class="drp" href="#">HOME 2</a>
+                              <a class="drp" href="./index2.html">HOME 2</a>
                             </div>
                           </div>  
                         </li>
@@ -36,7 +36,7 @@
                             <a href="#" class="dropbtn btn">ABOUT</a>
                             <i class="fa-solid fa-angle-down"></i>
                             <div class="dropdown-content">
-                              <a class="drp" href="#">ABOUT</a>
+                              <a class="drp" href="./aboutus.html">ABOUT US</a>
                               <a class="drp" href="#">OUR TEAM</a>
                               <a class="drp" href="#">FAQ</a>
                             </div>
