--- a/Meta NFT/public/index2.html
+++ b/Meta NFT/public/index2.html
@@ -33,7 +33,7 @@
                             <a href="#" class="dropbtn btn">ABOUT</a>
                             <i class="fa-solid fa-angle-down"></i>
                             <div class="dropdown-content">
-                              <a class="drp" href="#">ABOUT</a>
+                              <a class="drp" href="./aboutus.html">ABOUT US</a>
                               <a class="drp" href="#">OUR TEAM</a>
                               <a class="drp" href="#">FAQ</a>
                             </div>
@@ -227,6 +227,26 @@
                     </div>
                 </div>
               </div>
+            </div>
+          </section>
+          <section id="bird">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 g-3">
+                        <div class="txt">
+                            <h4>Discover More</h4>
+                            <h3>Explore & Sell Your Awesome NFTs Art</h3>
+                            <p>Dolor repellendus temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus sae eveniet ut et voluptates repudiandae sint et moles tiae non recusandae.</p>
+                            <p>Ac vulputate ornare donec orci sed gravida senectus. Felis quis morbi vivamus est eget sapien magnis quis.</p>
+                            <button>Read More <i class="fa-solid fa-arrow-right"></i></button>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 g-3">
+                        <div class="img">
+                            <img src="https://hasnaanajmi.com/env/Metanft/images/about.png" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
           </section>
           <section id="anime">
