--- a/Meta NFT/public/index.html
+++ b/Meta NFT/public/index.html
@@ -271,7 +271,7 @@
           <a href="#">Discover more<i class="fa-solid fa-angle-right"></i></a>
         </div>
         <div class="row">
-          <div class="col-lg-4 g-3">
+          <div class="col-lg-4 col-mg-6 g-3">
               <div class="boxing">
                 <div class="all">
                   <div class="img">
@@ -309,7 +309,7 @@
                 </div>
               </div>
           </div>
-          <div class="col-lg-4 g-3">
+          <div class="col-lg-4 col-mg-6 g-3">
               <div class="boxing">
                 <div class="all">
                   <div class="img">
@@ -347,7 +347,7 @@
                 </div>
               </div>
           </div>
-          <div class="col-lg-4 g-3">
+          <div class="col-lg-4 col-mg-6 g-3">
               <div class="boxing">
                 <div class="all">
                   <div class="img">
