Meta Nft Task Test End

--- a/Meta NFT/public/index.html
+++ b/Meta NFT/public/index.html
@@ -16,7 +16,7 @@
     <header id="all">
         <div class="container">
             <div class="all_line">
-                <a href="./index2.html">
+                <a href="./index.html">
                     <img src="https://hasnaanajmi.com/env/Metanft/images/logo.png" alt="">
                 </a>
                 <nav class="menu">
@@ -154,22 +154,22 @@
                   </div>
                   <div class="all" style="padding:10px 0px">
                     <div class="row">
-                      <div class="col-lg-6 g-2">
+                      <div class="col-lg-6 col-md-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/1.jpg" alt="">
                         </a>
                       </div>
-                      <div class="col-lg-6 g-2">
+                      <div class="col-lg-6 col-md-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/2.jpg" alt="">
                         </a>
                       </div>
-                      <div class="col-lg-6 g-2">
+                      <div class="col-lg-6 col-md-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/3.jpg" alt="">
                         </a>
                       </div>
-                      <div class="col-lg-6 g-2">
+                      <div class="col-lg-6 col-md-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/4.jpg" alt="">
                         </a>
@@ -271,7 +271,7 @@
           <a href="#">Discover more<i class="fa-solid fa-angle-right"></i></a>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-mg-6 g-3">
+          <div class="col-lg-4 col-md-6 g-3">
               <div class="boxing">
                 <div class="all">
                   <div class="img">
@@ -309,7 +309,7 @@
                 </div>
               </div>
           </div>
-          <div class="col-lg-4 col-mg-6 g-3">
+          <div class="col-lg-4 col-md-6 g-3">
               <div class="boxing">
                 <div class="all">
                   <div class="img">
@@ -347,7 +347,7 @@
                 </div>
               </div>
           </div>
-          <div class="col-lg-4 col-mg-6 g-3">
+          <div class="col-lg-4 col-md-6 g-3">
               <div class="boxing">
                 <div class="all">
                   <div class="img">
@@ -395,7 +395,7 @@
           <a href="#">Discover more<i class="fa-solid fa-angle-right"></i></a>
         </div>
         <div class="row">
-          <div class="col-lg-4 g-3">
+          <div class="col-lg-4 col-md-6 g-3">
               <div class="boxing">
                 <div class="all">
                   <div class="img">
@@ -433,7 +433,7 @@
                 </div>
               </div>
           </div>
-          <div class="col-lg-4 g-3">
+          <div class="col-lg-4 col-md-6 g-3">
               <div class="boxing">
                 <div class="all">
                   <div class="img">
@@ -471,7 +471,7 @@
                 </div>
               </div>
           </div>
-          <div class="col-lg-4 g-3">
+          <div class="col-lg-4 col-md-6 g-3">
             <div class="boxing">
               <div class="all">
                 <div class="img">
@@ -509,7 +509,7 @@
               </div>
             </div>
         </div>
-          <div class="col-lg-4 g-3">
+          <div class="col-lg-4 col-md-6 g-3">
             <div class="boxing">
               <div class="all">
                 <div class="img">
@@ -547,7 +547,7 @@
               </div>
             </div>
         </div>
-        <div class="col-lg-4 g-3">
+        <div class="col-lg-4 col-md-6 g-3">
           <div class="boxing">
             <div class="all">
               <div class="img">
@@ -585,7 +585,7 @@
             </div>
           </div>
       </div>
-      <div class="col-lg-4 g-3">
+      <div class="col-lg-4 col-md-6 g-3">
         <div class="boxing">
           <div class="all">
             <div class="img">
@@ -623,7 +623,7 @@
           </div>
         </div>
     </div>
-    <div class="col-lg-4 g-3">
+    <div class="col-lg-4 col-md-6 g-3">
       <div class="boxing">
         <div class="all">
           <div class="img">
@@ -661,7 +661,7 @@
         </div>
       </div>
   </div>
-  <div class="col-lg-4 g-3">
+  <div class="col-lg-4 col-md-6 g-3">
     <div class="boxing">
       <div class="all">
         <div class="img">
@@ -817,49 +817,61 @@
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Accordion Item #1
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                What are the NFTs?
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusm tmpor incididunt ut labore et dolore magna aliqua. enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Accordion Item #2
+                How do i Get NFTs?
               </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusm tmpor incididunt ut labore et dolore magna aliqua. enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingThree">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Accordion Item #3
+                How we can buy and invest NFTs ?
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusm tmpor incididunt ut labore et dolore magna aliqua. enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingFour">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Accordion Item #4
+                Where we can buy and sell NFTs ?
               </button>
             </h2>
             <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusm tmpor incididunt ut labore et dolore magna aliqua. enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFive">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                Who are the team behind the project?
+              </button>
+            </h2>
+            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusm tmpor incididunt ut labore et dolore magna aliqua. enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
               </div>
             </div>
           </div>
