--- a/Meta NFT/public/about.html
+++ b/Meta NFT/public/about.html
@@ -15,7 +15,7 @@
     <header id="all">
         <div class="container">
             <div class="all_line">
-                <a href="./index2.html">
+                <a href="./about.html">
                     <img src="https://hasnaanajmi.com/env/Metanft/images/logo.png" alt="">
                 </a>
                 <nav class="menu">
@@ -35,7 +35,7 @@
                             <a href="#" class="dropbtn btn">ABOUT</a>
                             <i class="fa-solid fa-angle-down"></i>
                             <div class="dropdown-content">
-                              <a class="drp" href="./aboutus.html">ABOUT US</a>
+                              <a class="drp" href="./about.html">ABOUT US</a>
                               <a class="drp" href="#">OUR TEAM</a>
                               <a class="drp" href="#">FAQ</a>
                             </div>
