--- a/Meta NFT/public/index.html
+++ b/Meta NFT/public/index.html
@@ -36,7 +36,7 @@
                             <a href="#" class="dropbtn btn">ABOUT</a>
                             <i class="fa-solid fa-angle-down"></i>
                             <div class="dropdown-content">
-                              <a class="drp" href="./aboutus.html">ABOUT US</a>
+                              <a class="drp" href="./about.html">ABOUT US</a>
                               <a class="drp" href="#">OUR TEAM</a>
                               <a class="drp" href="#">FAQ</a>
                             </div>
@@ -70,7 +70,7 @@
                         </li>
                     </ul>
                 </nav>
-                <button class="a_navbar">JOIN DISCORD</button>
+                <a href="#" class="a_navbar">JOIN DISCORD</a>
             </div>
             </div>
     </header>
