--- a/Meta NFT/public/index2.html
+++ b/Meta NFT/public/index2.html
@@ -33,7 +33,7 @@
                             <a href="#" class="dropbtn btn">ABOUT</a>
                             <i class="fa-solid fa-angle-down"></i>
                             <div class="dropdown-content">
-                              <a class="drp" href="./aboutus.html">ABOUT US</a>
+                              <a class="drp" href="./about.html">ABOUT US</a>
                               <a class="drp" href="#">OUR TEAM</a>
                               <a class="drp" href="#">FAQ</a>
                             </div>
