--- a/Meta NFT/public/index.html
+++ b/Meta NFT/public/index.html
@@ -138,7 +138,7 @@
           <a href="#">Discover more<i class="fa-solid fa-angle-right"></i></a>
         </div>
         <div class="row">
-          <div class="col-lg-4 g-3">
+          <div class="col-lg-4 col-md-6 col-12 g-3">
               <div class="boxing">
                 <div class="container">
                   <div class="peple">
@@ -154,22 +154,22 @@
                   </div>
                   <div class="all" style="padding:10px 0px">
                     <div class="row">
-                      <div class="col-lg-6 col-md-6 g-2">
+                      <div class="col-lg-6 col-md-6 col-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/1.jpg" alt="">
                         </a>
                       </div>
-                      <div class="col-lg-6 col-md-6 g-2">
+                      <div class="col-lg-6 col-md-6 col-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/2.jpg" alt="">
                         </a>
                       </div>
-                      <div class="col-lg-6 col-md-6 g-2">
+                      <div class="col-lg-6 col-md-6 col-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/3.jpg" alt="">
                         </a>
                       </div>
-                      <div class="col-lg-6 col-md-6 g-2">
+                      <div class="col-lg-6 col-md-6 col-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/4.jpg" alt="">
                         </a>
@@ -179,7 +179,7 @@
                 </div>
               </div>
           </div>
-          <div class="col-lg-4 g-3">
+          <div class="col-lg-4 col-md-6 col-12 g-3">
               <div class="boxing">
                 <div class="container">
                   <div class="peple">
@@ -195,22 +195,22 @@
                   </div>
                   <div class="all" style="padding:10px 0px">
                     <div class="row">
-                      <div class="col-lg-6 g-2">
+                      <div class="col-lg-6 col-md-6 col-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/5.jpg" alt="">
                         </a>
                       </div>
-                      <div class="col-lg-6 g-2">
+                      <div class="col-lg-6 col-md-6 col-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/6.jpg" alt="">
                         </a>
                       </div>
-                      <div class="col-lg-6 g-2">
+                      <div class="col-lg-6 col-md-6 col-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/7.jpg" alt="">
                         </a>
                       </div>
-                      <div class="col-lg-6 g-2">
+                      <div class="col-lg-6 col-md-6 col-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/8.jpg" alt="">
                         </a>
@@ -220,7 +220,7 @@
                 </div>
               </div>
           </div>
-          <div class="col-lg-4 g-3">
+          <div class="col-lg-4 col-md-6 col-12 g-3">
               <div class="boxing">
                 <div class="container">
                   <div class="peple">
@@ -236,22 +236,22 @@
                   </div>
                   <div class="all" style="padding:10px 0px">
                     <div class="row">
-                      <div class="col-lg-6 g-2">
+                      <div class="col-lg-6 col-md-6 col-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/9.jpg" alt="">
                         </a>
                       </div>
-                      <div class="col-lg-6 g-2">
+                      <div class="col-lg-6 col-md-6 col-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/10.jpg" alt="">
                         </a>
                       </div>
-                      <div class="col-lg-6 g-2">
+                      <div class="col-lg-6 col-md-6 col-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/11.jpg" alt="">
                         </a>
                       </div>
-                      <div class="col-lg-6 g-2">
+                      <div class="col-lg-6 col-md-6 col-6 g-2">
                         <a class="img" href="#">
                           <img src="https://hasnaanajmi.com/env/Metanft/images/collections/12.jpg" alt="">
                         </a>
