--- a/Meta NFT/public/index.html
+++ b/Meta NFT/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Meta NFT Task Test">
     <meta name="keywords" content="Meta Nft Task Demo Version">
-    <link rel="icon" href="https://hasnaanajmi.com/env/Metanft/images/icon.png">
+    <link rel="icon" href="https://metanft.hasnaanajmi.org/images/icon.png">
     <title>Meta NFT</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../src/scss/style.css">
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="all_line">
                 <a href="./index.html">
-                    <img src="https://hasnaanajmi.com/env/Metanft/images/logo.png" alt="">
+                    <img src="https://metanft.hasnaanajmi.org/images/logo.png" alt="">
                 </a>
                 <nav class="menu">
                     <ul>
@@ -79,7 +79,7 @@
         <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                  <div class="qlobal" style="background-image: url(https://hasnaanajmi.com/env/Metanft/images/home2.jpg);">
+                  <div class="qlobal" style="background-image: url(https://metanft.hasnaanajmi.org/images/home2.jpg);">
                    <div class="container">
                     <div class="txt" data-aos="fade-down">
                       <h1>Welcome To MetaNFT</h1>
@@ -93,7 +93,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="qlobal" style="background-image: url(https://hasnaanajmi.com/env/Metanft/images/home3.jpg);">
+                <div class="qlobal" style="background-image: url(https://metanft.hasnaanajmi.org/images/home3.jpg);">
                   <div class="container">
                     <div class="txt" data-aos="fade-down">
                       <h1>Welcome To MetaNFT</h1>
@@ -107,7 +107,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="qlobal" style="background-image: url(https://hasnaanajmi.com/env/Metanft/images/home.jpg);">
+                <div class="qlobal" style="background-image: url(https://metanft.hasnaanajmi.org/images/home.jpg);">
                   <div class="container">
                     <div class="txt" data-aos="fade-down">
                       <h1>Welcome To MetaNFT</h1>
@@ -137,13 +137,13 @@
           <h3>Top Collection</h3>
           <a href="#">Discover more<i class="fa-solid fa-angle-right"></i></a>
         </div>
-        <div class="row">
-          <div class="col-lg-4 col-md-6 col-12 g-3">
+        <div id="crt" class="row">
+          <!-- <div class="col-lg-4 col-md-6 col-12 g-3">
               <div class="boxing">
                 <div class="container">
                   <div class="peple">
                     <a href="#">
-                      <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/1.jpg" alt="">
+                      <img src="https://metanft.hasnaanajmi.org/images/avatars/1.jpg" alt="">
                     </a>
                     <a href="#">
                       <h4>Abstract painting</h4>
@@ -184,7 +184,7 @@
                 <div class="container">
                   <div class="peple">
                     <a href="#">
-                      <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/2.jpg" alt="">
+                      <img src="https://metanft.hasnaanajmi.org/images/avatars/1.jpg" alt="">
                     </a>
                     <a href="#">
                       <h4>Modern Art</h4>
@@ -225,7 +225,7 @@
                 <div class="container">
                   <div class="peple">
                     <a href="#">
-                      <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/3.jpg" alt="">
+                      <img src="https://metanft.hasnaanajmi.org/images/avatars/1.jpg" alt="">
                     </a>
                     <a href="#">
                       <h4>Wallpapers Figure</h4>
@@ -260,7 +260,7 @@
                   </div>
                 </div>
               </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -961,6 +961,7 @@
       </div>
     </div>
    </footer>
+   <script src="../src/js/index.js"></script>
    <script src="https://kit.fontawesome.com/610cd415f0.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
