--- a/Meta NFT/public/index2.html
+++ b/Meta NFT/public/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://hasnaanajmi.com/env/Metanft/images/icon.png">
+    <link rel="icon" href="https://metanft.hasnaanajmi.org/images/icon.png">
     <title>Meta NFT</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../src/scss/style.css">
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="all_line">
                 <a href="./index2.html">
-                    <img src="https://hasnaanajmi.com/env/Metanft/images/logo.png" alt="">
+                    <img src="https://metanft.hasnaanajmi.org/images/logo.png" alt="">
                 </a>
                 <nav class="menu">
                     <ul>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="col-lg-6 g-3">
                         <div class="img">
-                            <img src="https://hasnaanajmi.com/env/Metanft/images/home.png" alt="">
+                            <img src="https://metanft.hasnaanajmi.org/images/home.png" alt="">
                         </div>
                     </div>
                 </div>
